<resources>
    <string name="app_name">Intellicare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_drawables">Available Icons</string>
    <string name="action_native">Native Activity</string>
    <string name="action_cordova">HTML5 Activity</string>
    <string name="action_rating">Rating Activity</string>
    <string name="action_help">Help</string>
    <string name="title_drawables_activity">Available Icons</string>
    <string name="title_consent">Consent Form (STU00074405)</string>
    <string name="subtitle_consent">NU IRB Approved Until 2021</string>
    <string name="action_consent">Consent Activity</string>
    <string name="button_consent">I consent. Continue&#8230;</string>
    <string name="button_quit">Exit</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="hint_enter_name">Enter your name&#8230;</string>
    <string name="title_rating">Rate your experience</string>
    <string name="desc_rating">How well did this app work for you?</string>
    <string name="terrible_rating">Terrible</string>
    <string name="great_rating">Great</string>
    <string name="doing_better">How can this app be better (for you)?</string>
    <string name="doing_better_placeholder">Enter suggestions. (Optional)</string>
    <string name="action_submit">Submit</string>
    <string name="action_close">Close</string>
    <string name="log_url">http://intellicare.cbits.northwestern.edu//events/log</string>
    <string name="button_previous">&#171; Back</string>
    <string name="button_next">Next &#187;</string>
    <string name="button_close">Close</string>
    <string name="button_continue">Continue</string>
    <string name="button_skip">Skip</string>
    <string name="action_skip">Skip</string>
    <string name="message_complete_form">Please answer all the questions to continue&#8230;</string>
    <string name="message_submitted_form">Thank you! Your responses have been successfully recorded.</string>
    <string name="phq_title">PHQ-4</string>
    <string name="phq_subtitle">Personal Health Questionnaire</string>
    <string name="phq_intro">Over the past 2 weeks have you been bothered by these problems?</string>
    <string name="phq_one">Feeling nervous, anxious, or on edge</string>
    <string name="phq_two">Not being able to stop or control worrying</string>
    <string name="phq_three">Feeling down, depressed, or hopeless</string>
    <string name="phq_four">Little interest or pleasure in doing things</string>
    <string name="phq_zero_radio">Not at all</string>
    <string name="phq_one_radio">Several days</string>
    <string name="phq_two_radio">More days than not</string>
    <string name="phq_three_radio">Nearly every day</string>
    <string name="demographic_title">Demographics</string>
    <string name="demographic_subtitle">Tell us about you&#8230;</string>
    <string name="demographic_intro">Please complete the following questions to continue.</string>
    <string name="birth_year_label">What year were you were born?</string>
    <string name="birth_year_title">Birth Year</string>
    <string name="gender_label">What is your gender?</string>
    <string name="gender_title">Gender</string>
    <string-array name="labels_gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="ethnicity_label">Are you of Hispanic, Latino, or Spanish origin?</string>
    <string name="ethnicity_title">Ethnicity</string>
    <string-array name="labels_ethnicity">
        <item>Not of Hispanic, Latino, or Spanish origin</item>
		<item>Mexican, Mexican American, Chicano</item>
		<item>Puerto Rican</item>
		<item>Cuban</item>
		<item>Another Hispanic, Latino, or Spanish origin</item>
		<item>Unknown</item>
    </string-array>
    <string name="race_label">Which category best describes your race?</string>
    <string name="race_title">Race</string>
    <string-array name="labels_race">
        <item>American Indian/Alaska Native</item>
        <item>Asian</item>
        <item>Black or African American</item>
        <item>Native Hawaiian/Other Pacific Islander</item>
        <item>White</item>
        <item>Other</item>
    </string-array>
    <string name="education_label">What was the highest level of education that you completed?</string>
    <string name="education_title">Education</string>
    <string-array name="labels_education">
        <item>Did not complete high school</item>
        <item>Completed high school</item>
        <item>Some college</item>
        <item>Bachelor\'s degree</item>
        <item>Graduate degree (Master\'s, Ph.D., J.D., M.D., etc.)</item>
	</string-array>
    <string name="motivation_label">What is the main reason you are using this app?</string>
    <string name="respond_value">(Tap to answer&#8230;)</string>
    <string name="phq4_title">Personal Questionnaire</string>
    <string name="phq4_message">Please fill out this personal questionnaire.</string>
    <string name="recruitment_title">Recruitment</string>
    <string name="recruitment_intro">We are always looking for participants for future research studies. \n\nIf you agree that someone may contact you in the future, after your participation in this study is over, to ask you to be in more research, please fill out the form below. Agreeing to be contacted increases the risk to your privacy. It will be your responsibility to tell the project if your contact information changes.\n\nIf you do not agree that someone may contact you in the future, after your participation in this study is over, and to ask you to be in more research, simply select the "Skip" option above.</string>
    <string name="recruitment_name_label">Your name:</string>
    <string name="recruitment_email_label">Your preferred e-mail:</string>
    <string name="recruitment_phone_label">Phone number (optional):</string>
    <string name="recruitment_time_label">Best time to contact you (optional):</string>
    <string name="recruitment_time_choose">(Tap to choose a time&#8230;)</string>
    <string name="recruitment_time_title">Best time to contact</string>
    <string-array name="recruitment_time_labels">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>
    <string name="recruitment_name_message">Please provide your full name to continue.</string>
    <string name="recruitment_email_message">Please provide a valid e-mail address to continue.</string>
    <string name="recruitment_phone_message">Please provide a valid phone number to continue.</string>
    <string name="motivation_question">What are all of the reasons that you are using this app?</string>
    <string name="reason_improve_me">I want to improve the quality of my life.</string>
	<string name="reason_improve_others">I want to help someone else improve their quality of life.</string>
    <string name="reason_curious">I am just curious to look at the app.</string>
    <string name="reason_research_study">I am participating in a research study.</string>
	<string name="reason_other">Please include any other reasons here. (Optional)</string>
	<string name="label_reason_other">Other reasons</string>
	<string name="motivation_title">Motivation</string>
	<string name="title_primary_reason">What is your main reason?</string>
	<string name="message_motivation_select_one">Please select at least one reason or provde your own.</string>
	<string name="title_why_not_consent">Why are you leaving?</string>
	<string name="why_not_too_long">The form is too long?</string>
	<string name="why_not_unclear">The form is hard to understand?</string>
	<string name="why_not_dont_want">Don\'t wish to participate?</string>
	<string name="why_not_something_else">Thought this was something else?</string>
	<string name="why_not_unknown">Don\'t want to say?</string>
	<string name="install_intellicare_title">Install Intellicare?</string>
	<string name="install_intellicare_message">This app is part of a larger suite of apps called Intellicare. Would you like to install the main app that manages this and other Intellicare apps?</string>
	<string name="install_intellicare_no">No</string>
	<string name="install_intellicare_yes">Yes</string>
	<string name="install_intellicare_link">https://play.google.com/store/apps/details?id=edu.northwestern.cbits.intellicare.conductor</string>
	<string name="title_beta_testing">Pardon our dust</string>
	<string name="message_beta_testing">We appreciate that you downloaded and will be using this app.\n\nPlease keep in mind that it\'s still under active development. If you experience an issue, please let us know by sending an e-mail from the Feedback item in the Options menu.</string>
	<string name="email_feedback_address">c-karr@northwestern.edu</string>
	<string name="email_feedback_subject" formatted="false">Feedback: %s</string>
	<string name="email_feedback_body" formatted="false">Have thoughts about %s? Let us know!</string>
	<string name="email_toast_no_client">Unable to send message using standard client. Please send a note to c-karr@northwestern.edu and let us know what\'s going on.</string>
	<string name="action_feedback">Send Feedback</string>
	<string name="subtitle_consented_date" formatted="false">Consented: %s</string>
	<string name="message_research_disclosure">Thank you for your interest in Intellicare.\n\nThis application is part of a research study funded by the National Institute of Health and is intended for legal residents of the United States who are 19 years or older.\n\nPlease click OK to certify that you meet these requirements.</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="settings_group_credits">Credits &amp; Acknowledgements</string>
	<string name="creator_kmf">Kathryn Macapagal Fridberg</string>
	<string name="creator_lkt">Louise K. Thornton</string>
	<string name="creator_smk">Susan Mae Kaiser</string>
	<string name="creator_dcm">David C. Mohr</string>
	<string name="creator_sms">Stephen M. Schueller</string>
	<string name="creator_cjk">Chris J. Karr</string>
	<string name="creator_lxs">Laurie Stark</string>
	<string name="creator_gab">Gabriel A. Saravia</string>
	<string name="creator_jxd">Jenna Duffecy</string>
	<string name="creator_mxb">Mark Begale</string>
	<string name="creator_gas">Gwendolyn Smuda</string>
	<string name="creator_kmp">Kristina M. Pecora</string>
	<string name="creator_exs">Evan Story</string>
	<string name="role_clinical_lead">Clincal Designer</string>
	<string name="role_tech_lead">Technology Designer</string>
	<string name="role_clinical_consultant">Clincal Consultant</string>
	<string name="role_project_manager">Project Manager</string>
	<string name="testing_lead">Quality Assurance &amp; Testing Lead</string>
	<string name="role_tech_consultant">Technology Consultant</string>
	<string name="copy_disclaimer">Copyright &amp; Disclaimer</string>
	<string name="copy_title">Copyright &amp; Disclaimer</string>
	<string name="copy_message">Intellicare is &#169; 2014 by Northwestern University\n\nAll rights reserved.\n\nIntellicare is not intended to diagnose, treat, prevent, or cure any medical condition.</string>
	<string name="confirm_title">Are you sure?</string>
	<string name="confirm_message">Your answers to these questions are very important and are used improve Intellicare apps.\n\nAre you sure that you want to skip them?</string>
	<string name="auth_success_title">Great Work!</string>
	<string name="auth_success_message">You have successfully connected the app to your online account.</string>
	<string name="auth_success_close">Continue&#8230;</string>
    <string name="error_missing_uri">Missing or invalid URL. Closing&#8230;</string>
    <string name="menu_close">Close</string>
    <string name="action_faq">Frequently Asked Questions</string>
</resources>