<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/action_set_notification_preferences">
        <Preference android:title="@string/settings_reminder_time" android:key="settings_reminder_time" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_group_credits">
	 	<Preference android:title="@string/creator_mxb" android:summary="@string/role_clinical_lead" />
		<Preference android:title="@string/creator_gas" android:summary="@string/role_tech_lead" />
		<Preference android:title="@string/creator_smk" android:summary="@string/role_project_manager" />
		<Preference android:title="@string/creator_sms" android:summary="@string/role_clinical_consultant" />
		<Preference android:title="@string/creator_dcm" android:summary="@string/role_clinical_consultant" />
		<Preference android:title="@string/copy_disclaimer" android:key="copyright_statement" />
	</PreferenceCategory>
</PreferenceScreen>