<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView android:text="@string/motivation_question"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />
    <CheckBox android:id="@+id/reason_research"
        android:text="@string/reason_research_study"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />
    <CheckBox android:id="@+id/reason_improve_me"
        android:text="@string/reason_improve_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="16dp" />
    <CheckBox android:id="@+id/reason_improve_others"
        android:text="@string/reason_improve_others"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="16dp" />
    <CheckBox android:id="@+id/reason_curious"
        android:text="@string/reason_curious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom="16dp" />
    <TextView android:text="@string/label_reason_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginBottom="0dp" />
    <EditText android:id="@+id/reason_other"
        android:hint="@string/reason_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:singleLine="false" />
</LinearLayout>
