<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.northwestern.cbits.intellicare.moveme.MainActivity" >
    <item android:id="@+id/action_rating"
        android:title="@string/action_rating"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item android:id="@+id/action_network"
        android:title="@string/action_network"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item android:id="@+id/action_faq"
        android:title="@string/action_faq"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:showAsAction="never" />
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        app:showAsAction="never"
        android:showAsAction="never" />
</menu>
