<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:robot="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_drawables"
        android:icon="@drawable/ic_action_brush"
        robot:showAsAction="always"
        android:title="@string/action_drawables"/>
    <item
        android:id="@+id/action_cordova"
        android:icon="@drawable/ic_action_html5"
        robot:showAsAction="always"
        android:title="@string/action_cordova"/>
    <item
        android:id="@+id/action_native"
        android:icon="@drawable/ic_action_android"
        robot:showAsAction="always"
        android:title="@string/action_native"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        robot:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
