<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mantra="http://schemas.android.com/apk/res-auto" >
    
    <item android:id="@+id/action_new_focus_board"
        android:title="@string/action_new_mantra_board"
        mantra:showAsAction="always" />
    
    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        mantra:showAsAction="never"
        android:showAsAction="never" />
    <item android:id="@+id/action_faq"
        android:title="@string/action_faq"
        mantra:showAsAction="never"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        mantra:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/action_feedback"
        android:title="@string/action_feedback"
        mantra:showAsAction="never"
        android:showAsAction="never" />
    
</menu>