<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView android:id="@+id/desc_rating"
        android:text="@string/desc_rating"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />
    <edu.northwestern.cbits.intellicare.views.StarRatingView 
        android:id="@+id/star_rating_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
	    <TextView android:text="@string/terrible_rating"
	        android:textSize="14sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	    <View android:layout_width="0dp"
	        android:layout_height="5dp"
	        android:layout_weight="1" />
	    <TextView android:text="@string/great_rating"
	        android:textSize="14sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView android:text="@string/doing_better"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="20dp" />
    <EditText android:hint="@string/doing_better_placeholder"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="10dp" />
</LinearLayout>
