<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="16dp">
	    <TextView android:text="@string/recruitment_intro"
	        android:singleLine="false"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:layout_marginBottom="12dp" />
	    <TextView android:text="@string/recruitment_name_label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="14sp" />
	    <EditText android:id="@+id/recruitment_name_field"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textPersonName"
	        android:textSize="18sp" 
			android:layout_marginBottom="8dp" />
	    <TextView android:text="@string/recruitment_email_label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="14sp" />
	    <EditText android:id="@+id/recruitment_email_field"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="textEmailAddress"
	        android:textSize="18sp" 
			android:layout_marginBottom="8dp" />
	    <TextView android:text="@string/recruitment_phone_label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="14sp" />
	    <EditText android:id="@+id/recruitment_phone_field"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="phone"
	        android:textSize="18sp" 
			android:layout_marginBottom="8dp" />
	    <TextView android:id="@+id/recruitment_time_label"
	        android:text="@string/recruitment_time_label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textSize="14sp" />
	    <TextView android:id="@+id/recruitment_time_value" 
	        android:text="@string/recruitment_time_choose"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:textColor="#0099cc"
	        android:textSize="18sp" />
	</LinearLayout>
</ScrollView>