<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView android:text="@string/phq_intro"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />
    <TextView android:text="@string/phq_one"
        android:singleLine="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />
    <RadioGroup android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<LinearLayout android:orientation="vertical"
    	    android:layout_width="0dp"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="1">
		    <RadioButton android:id="@+id/radio_zero"
	    	    android:layout_width="wrap_content"
	    	    android:background="#00ff00"
	        	android:layout_height="wrap_content"
	        	android:text=""
	        	android:layout_gravity="center_horizontal"
	        	android:gravity="center_horizontal" />
	    	<TextView android:layout_width="match_parent"
	    	    android:gravity="center"
    	    	android:layout_height="wrap_content"
        		android:text="@string/phq_zero_radio" />
	    </LinearLayout>
	    <RadioButton android:id="@+id/radio_one"
    	    android:layout_width="0dp"
    	    android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="" 
        	android:gravity="center" />
	    <RadioButton android:id="@+id/radio_two"
    	    android:layout_width="0dp"
    	    android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="" 
        	android:gravity="center" />
	    <RadioButton android:id="@+id/radio_three"
    	    android:layout_width="0dp"
    	    android:layout_weight="1"
        	android:layout_height="wrap_content"
        	android:text="" 
        	android:gravity="center" />
   	</RadioGroup>
   	<LinearLayout android:orientation="horizontal" 
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content">
	    <TextView android:layout_width="0dp"
    	    android:layout_weight="1"
    	    android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/phq_one_radio" />
	    <TextView android:layout_width="0dp"
    	    android:layout_weight="1"
    	    android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/phq_two_radio" />
	    <TextView android:layout_width="0dp"
    	    android:layout_weight="1"
    	    android:gravity="center"
        	android:layout_height="wrap_content"
        	android:text="@string/phq_three_radio" />
   	</LinearLayout>
</LinearLayout>
